adding links and logoa to about section

--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,22 @@
   <body>
     <section id = "container">
         <section id="cover" class="text-primary panel background cover overflow-hidden">
-         <nav class="w-screen flex justify-between relative z-10 sm:p-4 lg:p-4">
+          <header class="text-gray-700 body-font">
+              <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+                <a class="flex items-center mb-4 md:mb-0">
+                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                </a>
+                <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center text-primary text-lg font-semibold">
+                  <a class="mr-5 hover:text-gray-900">About</a>
+                  <a class="mr-5 hover:text-gray-900">Solutions</a>
+                  <a class="mr-5 hover:text-gray-900">Partners</a>
+                  <a class="mr-5 hover:text-gray-900">Careers</a>
+                  <a class="mr-5 hover:text-gray-900">Blogs</a>
+                  <a class="mr-5 hover:text-gray-900">Contact</a>
+                </nav>
+              </div>
+          </header>
+         <!-- <nav class="w-screen flex justify-between relative z-10 sm:p-4 lg:p-4">
         <a href="#">
           <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
         </a>
@@ -36,14 +51,15 @@
             <li class="uppercase mx-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
           </a>
         </ul>
-        </nav>
-          <hr class="-mt-8">
+        </nav> -->
+          <hr class="-mt-4">
           <h1 class="text-4xl text-center tracking-wider p-4 mt-40">ABOUT</h1>
           <hr class="coverHr w-1/3 center mx-auto">
           <div class="tracking-widest text-center p-4">
             <p>Learn more about VINCI's</p>
             <p>mission, origin and teams</p>
           </div>
+          <div class="arrow bounce"></div>
        </section>
        <section class="flex mb-4 panel background first">
           <div class="ml-12 mt-6 p-6 pt-20 w-1/2">
@@ -84,117 +100,6 @@
           <img class="" src="../public/img/LEO.jpg" alt="picture of davinci">
         </div>
       </section>
-
-      <section class=" mb-4 text-primary panel background third">
-          <div class = "ml-12 mt-6 p-6 pt-14">
-          <h2 class="text-left font-semibold text-3xl tracking-wider">Team</h2>
-          <hr class="w-1/2">
-
-<!--EAGLE'S PAGE -->
-          <div class="p-4 mb-6">
-            <div class="flex mx-24">
-              <div class="w-1/3 px-4">
-                <div class="bg-gray-400 w-40 h-40">
-                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/eagle.jpg">
-                    <div id="myModal" class="modal">
-                      <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption">
-                      </div>
-                    </div>
-                </div>
-                <span class="flex ml-10 p-1 font-semibold">Eagle Wu</span>
-                <hr class="ml-2 w-1/2">
-                <span class="flex ml-8 p-1">Business Dev</span>
-              </div>
-
-
-<!--TIMS PAGE -->
-              <div class="w-1/3 px-4">
-                <div class="bg-gray-400 w-40 h-40">
-                    <img id="employeeImg" class="object-cover h-full w-full" src="../public/img/tim.jpeg">
-                    <div id="myModal" class="modal">
-                      <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption">
-                      </div>
-                    </div>
-                </div>
-                <span class="flex ml-10 p-1 font-semibold">Tim Clancy</span>
-                <hr class="w-1/2 ml-2">
-                <span class="flex ml-12 p-1 ">Engineer</span>
-              </div>
-
-          <!--Liam's PAGE -->
-              <div class="w-1/3 px-4 mr-4">
-                <div class="bg-gray-400 w-40 h-40">
-                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/liam.jpg">
-                    <div id="myModal" class="modal">
-                      <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption">
-                      </div>
-                    </div>
-                </div>
-                <span class=" flex ml-10 p-1 font-semibold">blank</span>
-                <hr class="w-1/2 ml-2">
-                <span class="flex ml-10 p-1">Business Dev</span>
-              </div>
-            </div>
-          </div>
-
-          <!--Matt's Page -->
-          <div class="p-4">
-            <div class="flex mx-24">
-              <div class="w-1/3 px-4 -mt-4">
-                <div class="bg-gray-400 w-40 h-40">
-                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/matt.jpg">
-                    <div id="myModal" class="modal">
-                      <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption">
-                      </div>
-                    </div>
-                </div>
-                <span class="flex ml-10 p-1 font-semibold">blank</span>
-                <hr class="w-1/2 ml-2">
-                <span class="flex ml-10 p-1">Business Dev</span>
-              </div>
-
-
-              <div class="w-1/3 px-4 -mt-4">
-                <div class="bg-gray-400 w-40 h-40">
-                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/img1.jpg">
-                    <div id="myModal" class="modal">
-                      <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption">
-                      </div>
-                    </div>
-                </div>
-                <span class="flex ml-10 p-1 font-semibold">blank</span>
-                <hr class="w-1/2 ml-2">
-                <span class="flex ml-10 p-1">Business Dev</span>
-              </div>
-              <div class="w-1/3 px-4 mr-4 -mt-4">
-                <div class="bg-gray-400 w-40 h-40">
-                    <img alt="" id="employeeImg" class="object-cover h-full w-full" src="../public/img/img1.jpg">
-                    <div id="myModal" class="modal">
-                      <span class="close">&times;</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption">
-                      </div>
-                    </div>
-                </div>
-                <span class="flex ml-10 p-1 font-semibold">blank</span>
-                <hr class="w-1/2 ml-2">
-                <span class="flex ml-10 p-1">Business Dev</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
 
       <section class=" mb-4 text-primary panel background">
         <section class="text-gray-700 body-font">
