--- a/views/about.html
+++ b/views/about.html
@@ -12,7 +12,7 @@
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
                 <a class="flex items-center mb-4 md:mb-0">
-                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
                 </a>
                 <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center text-primary text-lg font-semibold">
                   <a class="mr-5 hover:text-gray-900">About</a>
