--- a/views/careers.html
+++ b/views/careers.html
@@ -202,6 +202,6 @@
 =================== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-        <script type="text/javascript" src="../src/panels.js"></script>
+        <script src ="../src/js/about.js"></script>
   </body>
 </html>
