most recent changes, nav bar up to date

--- a/views/contact.html
+++ b/views/contact.html
@@ -6,53 +6,25 @@
     <link rel="stylesheet" href="../public/css/output-styles.css">
     <title>CONTACT</title>
   </head>
-  <body>
+  <body class="font-serif">
     <section id = "container">
         <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/assets/figma-imgs/contact-hero-img.png')">
-          <header class="text-gray-700 body-font">
+          <header class="text-gray-700 body-font ">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                <a class="flex items-center mb-4 md:mb-0">
-                  <img class="w-1/6 -mb-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+                <a href="./index.html" class="flex items-center mb-4 md:mb-0">
+                  <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
                 </a>
-                <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center text-primary text-lg font-semibold">
-                  <a href="" class="mr-5 hover:text-gray-900">About</a>
-                  <a class="mr-5 hover:text-gray-900">Solutions</a>
-                  <a class="mr-5 hover:text-gray-900">Partners</a>
-                  <a class="mr-5 hover:text-gray-900">Careers</a>
-                  <a class="mr-5 hover:text-gray-900">Blogs</a>
-                  <a class="mr-5 hover:text-gray-900">Contact</a>
+                <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                  <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
+                  <a href="./products.html" class="mr-5 hover:text-gray-900">Solutions</a>
+                  <a href="./partners.html" class="mr-5 hover:text-gray-900">Partners</a>
+                  <a href="./careers.html" class="mr-5 hover:text-gray-900">Careers</a>
+                  <a href="./blog.html" class="mr-5 hover:text-gray-900">Blogs</a>
+                  <a href="./contact.html" class="mr-5 hover:text-gray-900">Contact</a>
                 </nav>
               </div>
           </header>
-         <!-- <nav class="w-screen flex justify-between relative z-10 sm:p-4 lg:p-4">
-        <a href="#">
-          <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
-        </a>
-        <div class="px-4 cursor-pointer mx-5 my-3 md:hidden">
-          <svg class="w-12" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M4 6h16M4 12h16M4 18h16"></path></svg>
-        </div>
-        <ul class="flex justify-between sm:hidden md:flex md:text-sm lg:text-l lg:mx-20">
-          <a href="/about">
-            <li class="uppercase hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
-          </a>
-          <a href="/products">
-            <li class="uppercase mx-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Products</li>
-          </a>
-          <a href="partners">
-            <li class="uppercase mx-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
-          </a>
-          <a href="/blog">
-            <li class="uppercase mx-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
-          </a>
-          <a href="/careers">
-            <li class="uppercase mx-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
-          </a>
-          <a href="/contact">
-            <li class="uppercase mx-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
-          </a>
-        </ul>
-        </nav> -->
-            <hr class="-mt-4">
+          <hr class="-mt-4">
           <h1 class="text-4xl text-left tracking-wider p-4 mt-48 ml-24">CONTACT</h1>
           <div class="tracking-widest text-left p-4 ml-24">
             <p>Have any questions?</p>
