--- a/public/css/about.css
+++ b/public/css/about.css
@@ -32,9 +32,9 @@ body{
 }
 
 #cover{
-background-image: url("../img/eric.JPG");
+/* background-image: url("../img/eric.JPG");
 background-size: cover;
-box-shadow:inset 0 0 0 2000px rgba(25, 25, 25, 0.7);
+box-shadow:inset 0 0 0 2000px rgba(25, 25, 25, 0.7); */
 }
 
 .second{
