--- a/views/careers.html
+++ b/views/careers.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../public/css/careers.css">
     <title>Vinci VR</title>
   </head>
-  <body class="text-primary bg-secondary">
+  <body class="text-primary bg-secondary font-serif">
     <section id="container">
       <section class="panel hero-img text-2xl">
 
@@ -17,63 +17,23 @@
          NAV SECTION
         ==================-->
 
-        <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-6">
-          <a href="./index.html">
-            <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
-          </a>
-          <div class="px-4 cursor-pointer mx-5 my-3 md:hidden">
-            <svg class="w-12" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M4 6h16M4 12h16M4 18h16"></path></svg>
-          </div>
-          <ul class="flex justify-between sm:hidden md:flex md:text-sm lg:text-xl lg:mx-32">
-            <a href="./about.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
-            </a>
-            <a href="./products.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
-            </a>
-            <a href="./partners.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
-            </a>
-            <a href="./blog.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
-            </a>
-            <a href="./careers.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
-            </a>
-            <a href="./contact.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
-            </a>
-          </ul>
-        </nav>
+        <header class="text-gray-700 body-font ">
+            <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+              <a href="./index.html" class="flex items-center mb-4 md:mb-0">
+                <img class="w-1/6 -mt-2" src="../public/assets/figma-imgs/vinci-logo.png" alt="">
+              </a>
+              <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                <a href="./about.html" class="mr-5 hover:text-gray-900">About</a>
+                <a href="./products.html" class="mr-5 hover:text-gray-900">Solutions</a>
+                <a href="./partners.html" class="mr-5 hover:text-gray-900">Partners</a>
+                <a href="./careers.html" class="mr-5 hover:text-gray-900">Careers</a>
+                <a href="./blog.html" class="mr-5 hover:text-gray-900">Blogs</a>
+                <a href="./contact.html" class="mr-5 hover:text-gray-900">Contact</a>
+              </nav>
+            </div>
+        </header>
+        <hr class="-mt-4">
 
-        <!-- <nav class="w-screen flex justify-between relative z-10 border-b sm:p-4 lg:p-4">
-          <a href="./index.html">
-            <img class="max-w-xs h-16 sm:w-40 sm:h-auto sm:my-3" src="../public/assets/figma-imgs/vinci-logo.png" alt="vinci logo">
-          </a>
-          <div class="px-4 cursor-pointer mx-5 my-3 md:hidden">
-            <svg class="w-12" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor"><path d="M4 6h16M4 12h16M4 18h16"></path></svg>
-          </div>
-          <ul class="flex justify-between sm:hidden md:flex md:text-sm lg:text-xl lg:mx-32">
-            <a href="./about.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">About</li>
-            </a>
-            <a href="./products.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Solutions</li>
-            </a>
-            <a href="./partners.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Partners</li>
-            </a>
-            <a href="./blog.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Blog</li>
-            </a>
-            <a href="./careers.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Careers</li>
-            </a>
-            <a href="./contact.html">
-              <li class="uppercase m-5 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600">Contact</li>
-            </a>
-          </ul>
-        </nav> -->
 
         <!--===================
          HERO SECTION CONTENTS
