--- a/public/css/about.css
+++ b/public/css/about.css
@@ -27,15 +27,6 @@ body{
 
 /* Eventually give all the same class */
 
-.background{
-  background: #191919;
-}
-
-#cover{
-/* background-image: url("../img/eric.JPG");
-background-size: cover;
-box-shadow:inset 0 0 0 2000px rgba(25, 25, 25, 0.7); */
-}
 
 .second{
   border: 1px solid transparent;
@@ -47,31 +38,41 @@ box-shadow:inset 0 0 0 2000px rgba(25, 25, 25, 0.7); */
   background: rgba(37, 37, 37, 0.95);
 }
 
-#employeeImg{
-    cursor: pointer;
-    transition: 0.3s;
+/*STYLING FOR MODAL IMAGE*/
+
+#myImg {
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
-#employeeImg:hover{
+#myImg:hover {
   opacity: 0.7;
-  zoom: 1;
 }
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9);
+  /* Black w/ opacity */
 }
 
-/* Modal Content (image) */
 .modal-content {
   margin: auto;
   display: block;
@@ -79,41 +80,32 @@ box-shadow:inset 0 0 0 2000px rgba(25, 25, 25, 0.7); */
   max-width: 700px;
 }
 
-/* Caption of Modal Image */
 #caption {
   margin: auto;
   display: block;
-  width: 20rem;
+  width: 80%;
   max-width: 700px;
   text-align: center;
-  color: red;
+  color: #ccc;
   padding: 10px 0;
-  height: 20rem;
-  background-color: rgba(196,196,196,0.9);
-  position: absolute;
-  top: 200px;
-  left: 850px;
+  height: 150px;
 }
 
-/* Add Animation */
-.modal-content, #caption {
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
+.modal-content,
+#caption {
   animation-name: zoom;
   animation-duration: 0.6s;
 }
 
-@-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)}
-  to {-webkit-transform:scale(1)}
-}
-
 @keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
+  from {
+    transform: scale(0)
+  }
+  to {
+    transform: scale(1)
+  }
 }
 
-/* The Close Button */
 .close {
   position: absolute;
   top: 15px;
@@ -131,8 +123,8 @@ box-shadow:inset 0 0 0 2000px rgba(25, 25, 25, 0.7); */
   cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 700px) {
   .modal-content {
     width: 100%;
   }
+}
