Adjust title sizing for desktop/mobile/tablet views

--- a/views/about.html
+++ b/views/about.html
@@ -25,7 +25,7 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-bold">ABOUT</h1>
+          <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-6xl md:text-5xl xlg:text-6xl">ABOUT</h1>
           <hr class="coverHr w-1/4 center mx-auto">
           <div class="tracking-widest text-center pt-1">
             <p>Learn more about VINCI's</p>
