--- a/views/careers.html
+++ b/views/careers.html
@@ -41,7 +41,7 @@
         <section class="contents mt-24 w-full p-4 absolute">
             <!-- <div class="overlay w-full h-screen" style="position:absolute; top:0; left:0;  min-width:100%; min-height:100vh; background-color:rgba(0,0,0,0.2); z-index:0;"></div> -->
             <hr class="mt-20 p-2">
-            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-4xl md:text-6xl">Careers
+            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-6xl md:text-5xl xlg:text-6xl">Careers
             </h1>
             <hr class="mt-20 p-4">
             <p class="text-center text-lg font-bold z-10">Join the VINCI team</p>
