--- a/views/contact.html
+++ b/views/contact.html
@@ -25,7 +25,7 @@
               </div>
           </header>
           <hr class="-mt-4">
-          <h1 class="text-4xl text-left tracking-wider p-4 mt-48 ml-24">CONTACT</h1>
+          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-6xl md:text-5xl xlg:text-6xl">CONTACT</h1>
           <div class="tracking-widest text-left p-4 ml-24">
             <p>Have any questions?</p>
             <p>Drop us a message.</p>
