--- a/views/partners.html
+++ b/views/partners.html
@@ -25,7 +25,7 @@
             </div>
         </header>
         <hr class="-mt-4">
-          <h1 class="text-4xl text-left tracking-wider p-4 mt-48  ml-24">PARTNERS</h1>
+          <h1 class="text-left tracking-wider p-4 mt-48 ml-24 sm:text-6xl md:text-5xl xlg:text-6xl">PARTNERS</h1>
           <div class="tracking-widest text-left p-4 ml-24">
             <p>See how VINCI is changing </p>
             <p>training today.</p>
