--- a/views/products.html
+++ b/views/products.html
@@ -41,7 +41,7 @@
 
 
           <section class="w-full p-4 absolute z-1 sm:mt-32 md:-my-84">
-            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-4xl md:text-6xl" style="z-index:100;">
+            <h1 class="text-center uppercase font-sans font-black -mb-20 -mt-6 p-4 sm:text-6xl md:text-5xl xlg:text-6xl" style="z-index:100;">
               <hr class="mt-4">
               Codex
               <hr class="mt-4">
